added background color to help see new elements

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #3D4849;  /* to distinguish the white elements on screen*/
 }
 
 code {
